2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix various warnings.

	* scribo/binarization/otsu_threshold.hh: Fix comparisons between
	different types.

	* scribo/io/xml/load.hh: Convert to float.

	* scribo/text/paragraphs_closing.hh,
	* scribo/text/recognition.hh,
	* src/afp/components.hh: Remove unused variables.

	* src/binarization/otsu.cc: Silent warning.

	* src/misc/morpho.cc: Check number of arguments.

2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* common.mk: Fix include paths order.

2012-11-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Save full size region debug image.

	* src/content_in_doc.cc: Set output format to DebugWithImage.

	* scribo/io/img/save.hh: Do not subsample output image.

2012-11-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/content_in_doc.cc: Add more options.

2013-02-13  Roland Levillain  <roland@lrde.epita.fr>

	Simplify more Scribo Makefiles thanks to AM_DEFAULT_SOURCE_EXT.

	* src/binarization/Makefile.am,
	* src/contest/DAE-2011/Makefile.am,
	* src/contest/hdibco-2010/Makefile.am,
	* src/contest/hdlac-2011/Makefile.am,
	* src/postprocessing/Makefile.am,
	* src/primitive/remove/Makefile.am,
	* src/toolchain/nepomuk/Makefile.am,
	* src/util/Makefile.am,
	* tests/binarization/Makefile.am,
	* tests/convert/Makefile.am,
	* tests/core/Makefile.am,
	* tests/estim/Makefile.am,
	* tests/primitive/extract/Makefile.am,
	* tests/primitive/link/Makefile.am,
	* tests/toolchain/nepomuk/Makefile.am,
	* tests/util/Makefile.am:
	Here.

2010-04-22  Roland Levillain  <roland@lrde.epita.fr>

	Factor Makefiles' helpers.

	* scribo.mk, tests/tests.mk (AM_CPPFLAGS): Move...
	* common.mk: ...here.

2010-04-22  Roland Levillain  <roland@lrde.epita.fr>

	Use AM_DEFAULT_SOURCE_EXT to simplify Scribo's Makefiles.

	* common.mk: New.
	Include it...
	* scribo.mk,
	* tests/tests.mk:
	...here.
	* src/Makefile.am,
	* src/binarization/Makefile.am,
	* src/debug/Makefile.am,
	* src/filter/Makefile.am,
	* src/misc/Makefile.am,