@@ -91,7 +91,7 @@ int main(int argc, char* argv[])
   image2d<bool> output;
 
   output = toolchain::text_in_doc_preprocess(input_rgb, fg_extraction,
-					     lambda, 0.34, verbose);
+					     lambda, 0.34, false, verbose);
 
   mln::io::pbm::save(output, options.arg("output.pbm"));
 }
